--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,12 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
+  background-color:rgb(20, 20, 25);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-family: 'Abel', sans-serif;
+  font-size: 1rem;
   color: white;
-}
-
-.App-link {
-  color: #09d3ac;
 }
